YelpCamp/v2/README.md
# YelpCamp

- Add landing page
- Add campgrounds page that lists all campgrounds

## Each campground has:

- Name
- Image




## Layout and Basic Styling:

- Create header and footer partials
- Add in bootstrap



## Creating New Campgrounds:
- Setup campground post route
- Add in body-parser
- Setup route to show form
- Add basic unstyled form





## Style Campgrounds page:
- Add a better header/title
- Make campgrounds display in a grid



## Style the Navbar and Form:
- Add a navbar to all templates
- Styke the new campground form



## Add Mongoose:
- Install and configure mongoose
- Setup campground model
- use model inside of routes


## Show Page:
- Review RESTful routes we have seen
- Add description to campground model
- Learn db.connection.drop(): deletes all things in collection
- Add a show route/template